syntax = "proto3";

package models;
option go_package="code.cloudfoundry.org/bbs/models";

import "error.proto";

message ProtoCellCapacity {
  int32 memory_mb = 1 [json_name = "memory_mb"];
  int32 disk_mb = 2 [json_name = "disk_mb"];
  int32 containers = 3 [json_name = "containers"];
}

message ProtoCellPresence {
  string cell_id = 1 [json_name = "cell_id"];
  string rep_address = 2 [json_name = "rep_address"];
  string zone = 3 [json_name = "zone"];
  ProtoCellCapacity capacity = 4;
  repeated ProtoProvider rootfs_providers = 5 [json_name = "rootfs_provider_list"];
  repeated string placement_tags = 6 [json_name = "placement_tags"];
  repeated string optional_placement_tags = 7 [json_name = "optional_placement_tags"];
  string rep_url = 8 [json_name = "rep_url"];
}

message ProtoProvider {
  string name = 1 [json_name = "name"];
  repeated string properties = 2;
}

message ProtoCellsResponse {
  ProtoError error = 1;
  repeated ProtoCellPresence cells = 2;
}
